has been added new features into home page

--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.base-color{
+    color: #ff6500;
+}
+
+.bg-base-color{
+    background-color: #ff6500;
+}
